--- a/style.css
+++ b/style.css
@@ -275,7 +275,7 @@ section ul li::before {
     margin-bottom: 5px;
     font-family: "Satoshi-Bold";
     text-align: center;
-    color: black;
+    color: white;
 }
 
 .juntos button {
